Fix the jumpy behavior of eye icon

--- a/src/App.css
+++ b/src/App.css
@@ -138,4 +138,5 @@
   color: black;
   opacity: 60%;
   cursor: pointer;
+  width: 20px;
 }
